feat: change main colors

--- a/static-html/css/style.css
+++ b/static-html/css/style.css
@@ -1,7 +1,7 @@
 /* Base Styles */
 :root {
-    --primary-color: #ffd600;
-    --secondary-color: #3b444b;
+    --primary-color: #4884D9;
+    --secondary-color: #29292E;
     --text-color: #3b444b;
     --light-bg: #f6f6f6;
     --dark-bg: #31393e;
