feat: change fonts

--- a/static-html/css/header.css
+++ b/static-html/css/header.css
@@ -24,7 +24,7 @@
 
 .site-title {
     color: var(--white);
-    font-family: 'Gotham', Arial, sans-serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     font-size: 20px;
     font-weight: 600;
     line-height: 30px;
@@ -48,7 +48,7 @@
 
 .nav-menu a {
     color: var(--white);
-    font-family: 'Gotham', Arial, sans-serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     font-size: 14px;
     text-transform: uppercase;
 }
@@ -157,7 +157,7 @@
 
 .notification-banner p {
     margin: 0;
-    font-family: 'Gotham', Arial, sans-serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     font-size: 11px;
     font-weight: 500;
 }
