--- a/static-html/css/style.css
+++ b/static-html/css/style.css
@@ -8,29 +8,18 @@
     --white: #ffffff;
 }
 
-@font-face {
-    font-family: 'Gotham';
-    src: url('../fonts/Gotham-Bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'GothamLight';
-    src: url('../fonts/Gotham-Light.woff') format('woff');
+body {
+    font-family: 'Montserrat', Arial, sans-serif;
+    font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
-}
-
-body {
-    font-family: 'GothamLight', Arial, sans-serif;
     color: var(--text-color);
     line-height: 1.6;
     overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Gotham', Arial, sans-serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     font-weight: 700;
 }
 
@@ -95,7 +84,7 @@ ul {
     display: inline-block;
     padding: 10px 20px;
     border-radius: 5px;
-    font-family: 'Gotham', Arial, sans-serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     font-weight: 700;
     text-align: center;
     transition: all 0.3s ease;
@@ -278,14 +267,6 @@ ul {
 .accordion-button:focus {
     box-shadow: none;
     border-color: var(--primary-color);
-}
-
-.accordion-button::after {
-    font-weight: 200;
-}
-
-.accordion-button:not(.collapsed)::after {
-    font-weight: 200;
 }
 
 .accordion-body {
