fix: wrong check icon

--- a/static-html/css/style.css
+++ b/static-html/css/style.css
@@ -189,7 +189,7 @@ ul {
 }
 
 .activity-text ul li {
-    background-image: url('../images/icons/check.png');
+    background-image: url('../images/icons/check-green.png');
     background-position: left 5px;
     background-repeat: no-repeat;
     padding-left: 30px;
