--- a/static-html/css/style.css
+++ b/static-html/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-family: 'Montserrat', Arial, sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
@@ -19,7 +19,6 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', Arial, sans-serif;
     font-weight: 700;
 }
 
@@ -84,7 +83,6 @@ ul {
     display: inline-block;
     padding: 10px 20px;
     border-radius: 5px;
-    font-family: 'Montserrat', Arial, sans-serif;
     font-weight: 700;
     text-align: center;
     transition: all 0.3s ease;
