--- a/static-html/css/style.css
+++ b/static-html/css/style.css
@@ -6,6 +6,10 @@
     --light-bg: #f6f6f6;
     --dark-bg: #31393e;
     --white: #ffffff;
+    --cta-green: #BAD948;
+    --cta-yellow: #D9C448;
+    --cta-blue: #90AED9;
+    --variation1: #D9C448;
 }
 
 .color-primary {
