--- a/static-html/css/header.css
+++ b/static-html/css/header.css
@@ -8,8 +8,7 @@
 
 .main-header {
     background-color: var(--secondary-color);
-    padding: 12px 0;
-    height: 70px;
+    padding: 16px 0;
 }
 
 .site-header .container-fluid {
@@ -86,7 +85,7 @@
     margin-right: 12px;
 }
 .btn-inscription {
-    background-color: var(--primary-color);
+    background-color: var(--cta-yellow);
     color: var(--secondary-color);
     font-size: 14px;
     text-transform: uppercase;
@@ -146,7 +145,7 @@
 
 /* Notification Banner */
 .notification-banner {
-    background-color: var(--primary-color);
+    background-color: var(--cta-blue);
     color: var(--secondary-color);
     padding: 8px 0;
     text-align: center;
