chore: test blue CTA

--- a/static-html/css/style.css
+++ b/static-html/css/style.css
@@ -7,7 +7,8 @@
     --dark-bg: #31393e;
     --white: #ffffff;
     --cta-green: #BAD948;
-    --cta-yellow: #D9C448;
+    /*--cta-yellow: #D9C448;*/
+    --cta-yellow: #4884D9;
     --cta-blue: #90AED9;
     --variation1: #D9C448;
 }
